<resources>
    <string name="app_name">NASA App</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <!--<string name="search_wiki">Найти в Википедии</string>-->
    <string name="search_wiki">Search in Wikipedia</string>
    <!--<string name="wiki_helper_text">Поищите термин в википедии</string>-->
    <string name="wiki_helper_text">Search for this therm in wiki</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatingButton">FloatingButton</string>
    <string name="nasa_title">NASA</string>
    <string name="picture_of_the_day_subtitle">Picture of the day</string>
    <string name="picture_of_the_day_bottom_menu">Picture of the day</string>
    <string name="favorites_bottom_menu">Favorites</string>
    <string name="about_bottom_menu">About</string>
    <string name="about_app_version">App version</string>
    <string name="about_version_value">0.1-beta</string>
    <string name="about_version_title">Version</string>
    <string name="settings_title">Settings</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="favorites_picture">Favorites picture</string>
    <string name="chip_today">Today</string>
    <string name="chip_yesterday">Yesterday</string>
    <string name="chip_two_days_ago">Two days ago</string>
    <string name="settings_theme_title">Theme</string>
    <string name="radio_button_space">Space</string>
    <string name="radio_button_moon">Moon</string>
    <string name="radio_button_mars">Mars</string>
    <string name="favorites_title">Favorites</string>
    <string name="about_title">About</string>
    <string name="radio_button_light">Light</string>
    <string name="bottom_view_home">Home</string>
    <string name="bottom_view_gallery">Gallery</string>
    <string name="bottom_view_explore">Explore</string>
    <string name="bottom_view_settings">Settings</string>
    <string name="earth_image">Earth image</string>
    <string name="mars_image">Mars image</string>
    <string name="weather_image">Weather image</string>
    <string name="rover_item_image">Picture from Mars</string>
    <string name="camera1">Front Hazard Avoidance Camera</string>
    <string name="camera2">Rear Hazard Avoidance Camera</string>
    <string name="camera4">Chemistry and Camera Complex</string>
    <string name="camera3">Mast Camera</string>
    <string name="camera5">Mars Hand Lens Imager</string>
    <string name="camera6">Mars Descent Imager</string>
    <string name="camera9">Miniature Thermal Emission Spectrometer (Mini-TES)</string>
    <string name="camera7">Navigation Camera</string>
    <string name="camera8">Panoramic Camera</string>
    <string name="mars_title_text">Photos from Mars rover</string>
    <string name="choose_camera">Choose camera</string>
    <string name="empty_data_img">No data received</string>
    <string name="no_data_string">No data received</string>
    <string name="mark_as_favorite">Mark as favorite</string>
</resources>


