<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/AppToolbar"
            android:background="?attr/colorPrimaryVariant"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/settings_title"
            app:titleTextColor="?attr/primaryFontColor"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        style="@style/ScreenBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_layout_left">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settings_theme_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_theme_title"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/radio_button_space"
                    style="@style/RadioButton"/>

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/radio_button_moon"
                    style="@style/RadioButton"/>

                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/radio_button_mars"
                    style="@style/RadioButton"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
